Add intro to terraria

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>YOOO</title>
+	<title>The Best Game</title>
 </head>
 <body>
-	<h1>
-	<p>WHATS UP BOI SHOW YOSELF</p>
-	</h1>
+	<h1>If you've never heard of Terraria, please stop what you're doing</h1>
+	<h2>And in case you thought I was regurgitating some corny cliche of a quote, seriously, stop</h2>
+	<img src="TerrariaLogo1.jpeg" alt="TerrariaLogo1.jpeg">
+	<p>Terraria is a 2-Dimensional, adventure-type of game, where <strong>you</strong> as the player can <em>explore caves</em>, <em>fight monsters</em> and <em>intimidating bosses</em>, and become stronger by <em>mining</em> and <em>acquiring weapons</em>.</p>
 </body>
+By Source, Fair use, http://cdn.edgecast.steamstatic.com/steam/apps/105600/header.jpg?t=1479397782
 </html>
