Finish making index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,83 @@
 <body>
 	<h1>If you've never heard of Terraria, please stop what you're doing</h1>
 	<h2>And in case you thought I was regurgitating some corny cliche of a quote, seriously, stop</h2>
-	<img src="TerrariaLogo1.jpeg" alt="TerrariaLogo1.jpeg">
-	<p>Terraria is a 2-Dimensional, adventure-type of game, where <strong>you</strong> as the player can <em>explore caves</em>, <em>fight monsters</em> and <em>intimidating bosses</em>, and become stronger by <em>mining</em> and <em>acquiring weapons</em>.</p>
+<section>
+	<h3>
+	<img src="TerrariaLogo1.jpg">
+	<p><em>Terraria</em> is a 2-Dimensional, adventure-type of game, developed by RE-LOGIC. It was initially released by microsoft around 2011. It is an immersive game where players can do anything from exploration, building, fighting, and even crafting. From a credible source for opinions on video-games as I have years of experience playing them (yea that's going on my resume), I can say attest to Terraria being one of the most diverse, engaging, and captivating games I've ever played. However, a <em>picture</em> is worth a thousand words.</p>
+	</h3>
+</section>
+<section>
+	<img src="building.jpg">
+	<p>Here, you see a friendly commoner enjoying this amazing game by building a basic house with rooms which happened to have attracted some useful NPC's(Non-player character). You can interact with them throughout the game for purposes such as but not limited to: buying/selling items, upgrading your weapons, and even collecting taxes. <strong>Yes! You can even charge your NPC's for living in your beautifully built house!</strong> (If this house was built in San Francisco, he/she'd be filthy rich.)</p>
+	<p>Some people get very good at this aspect of the game and build such things like <em>this</em></p>
+	<img src="building1.jpg" width="1280" height="720">
+	<p>Or <em>this</em></p>
+	<img src="building2.jpg">
+</section>
+<section>
+	<h2><p>Now, that was just a <strong>TINY</strong> aspect compared to what the entire game has to offer</p>
+	</h2>
+	<h3><p>Here is a list of just <strong>some</strong> of the things you can do in the game that I can ponder off the top of my head</p>
+	</h3>
+	<ul>
+		<li>For minimalists, just explore the big, open world</li>
+		<li>Craft some junk, decent, good, amazing, why do you even need this types of armors. Theres a lot of them by the way.</li>
+		<img src="armor_collection.png">
+		<li>Fight an astrological nightmare they call the "Moon-Lord" and claim yourself as the strongest amongst the mere mortals around you.</li>
+		<img src="moon_lord.jpg">
+		<li>Dig up a meteor</li>
+		<li>Explore the jungle, snow, corrupt, hollow, desert and many other biomes.</li>
+		<li>Grow a tree</li>
+		<li>Grow all types of plants, flowers, and make things out of them like potions, dyes, and many more.</li>
+		<li>Grow another tree</li>
+		<li>Defend against a pirate invasion</li>
+		<li>Defend against a goblin invasion</li>
+		<li>And.... an alien invasion</li>
+		<li>Grow a tree</li>
+		<li>Go to hell, yup.</li>
+		<img src="hell.jpg">
+		<p>told ya</p>
+		<li>Do some engineering. This game has such a well made engine you can make things like <em>so</em> with the proper knowledge. I've even seen people make full, PLAYABLE pokemon games <strong>on the game</strong>! Game within another game right?</li>
+		<img src="wiring.png">
+		<p>Some man/woman doing some proper Terraria engineering</p>
+	</ul>
+</section>
+<section>
+	<p>Now some of you may be wondering, "How long do I play this game until I eventually get bored of it?" Here is an answer. I've logged over 300 in-game hours on this game and I have beaten it only once. Not that it takes that long, I've just never wanted the game to progress without me having explored everything beforehand. I still have things I've never even set foot on and I'm still quite a noobie on wiring and engineering. Oh yea, and this game has one of the lowest system requirements to run it. My laptop is composed of 80% potato and 20% overheating but it still runs Terraria fine on low settings.</p>
+</section>
+<section>
+	<p>If at the end of this, I've interested you even in the slightest way, check out their <a href="http://terraria.gamepedia.com/Terraria_Wiki"> Terraria Wiki </a> page. They have a "random" button you can click that'll take you to a randomized link on their wiki page which is quite fun. Now as a mere beginner programmer (I feel silly even calling myself "programmer"), I do not have the slightest judgement about the website. The page seems beautifully constructed by sight and in source code as well. I found a chunk of code that started with "script type="text/javascript" followed by some javascript code. This looks to me like some javascript was involved in the birth of this site. </p>
+	<p>Now before I let you all go and onto the steam market to finalize your purchase of Terraria, (it's only like 10 bucks by the freakin way) I've made a simple, easy to follow guide/table on what games you should buy if compared to Terraria. I have over 100+ hours logged on each of the games listed so I can tell you from experience that this is my honest opnion.</p>
+	<table border="1">
+		<tr>
+			<th>&nbsp</th>
+			<th>Battlefield: Bad Company</th>
+			<th>Battlefield 3</th>
+			<th>Battlefield 4</th>
+			<th>Skyrim</th>
+			<th>Counter Strike: Global Offensive</th>
+			<th>Minecraft</th>
+			<th>Halo 1, 2, 3, 4 (The rest are garbage)</th>
+			<th>Starcraft: Broodwar</th>
+		</tr>
+		<tr>
+			<th>Should I buy this instead of Terraria?</th>
+			<td colspan="7">&nbsp no</td>
+			<td>Maybe</td>
+		</tr>
+	</table>
+</section>
+<section>
+	<h3><p>Thank you <strong>all</strong> for taking the time out of your day to read this. I've listed the sources of the images i've found from the web.</p>
+	</h3>
+</section>
 </body>
-By Source, Fair use, http://cdn.edgecast.steamstatic.com/steam/apps/105600/header.jpg?t=1479397782
+	<p>Picture of logo: http://cdn.edgecast.steamstatic.com/steam/apps/105600/header.jpg?t=1479397782</p>
+	<p>Picture of houses : http://cdn.mos.cms.futurecdn.net/ifn3nf7wKNntBsWESMH7e7.jpg</p>
+	<p>Picture of the ginat castle : https://s-media-cache-ak0.pinimg.com/originals/b5/06/22/b50622835bbb4fe539909feac656a50e.jpg</p>
+	<p>Picture of armor collection : http://i.imgur.com/bSW0hhx.png</p>
+	<p>Picture of Moon-Lord : http://img15.deviantart.net/1431/i/2015/202/1/0/behold__the_moon_lord__by_simplepixelartartist-d927lsj.jpg</p>
+	<p>Picture of hell : https://i.ytimg.com/vi/BwC1--rt7qY/maxresdefault.jpg</p>
+	<p>Picture of engineering : https://forums.terraria.org/index.php?attachments/hoiktronic-counter-engines1c-png.13232/</p>
 </html>
